[package]
name = "lovecraft-api"
version = "0.1.0"
authors = ["Giorgi Beriashvili <giorgi.beriashvili@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2.0.0", features = ["rustls"] }
actix-rt = "1.1.1"
anyhow = "1.0.31"
dotenv = "0.15.0"
env_logger = "0.7.1"
futures = "0.3.5"
listenfd = "0.3.3"
log = "0.4.8"
rustls = "0.16.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
sqlx = { version = "0.3.5", features = [ "sqlite" ] }